<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Licensed to the Apache Software Foundation (ASF) under one or more
  ~ contributor license agreements.  See the NOTICE file distributed with
  ~ this work for additional information regarding copyright ownership.
  ~ The ASF licenses this file to You under the Apache License, Version 2.0
  ~ (the "License"); you may not use this file except in compliance with
  ~ the License.  You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.cloudera.spark</groupId>
  <artifactId>spark-client</artifactId>
  <packaging>jar</packaging>
  <name>Spark Remote Client</name>
  <version>0.1-SNAPSHOT</version>
  <url>https://issues.apache.org/jira/browse/SPARK-3215</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>1.6</java.version>
    <scala.binary.version>2.10</scala.binary.version>
    <spark.version>1.2.0-SNAPSHOT</spark.version>

    <!-- Should match Spark. -->
    <akka.group>org.spark-project.akka</akka.group>
    <akka.version>2.3.4-spark</akka.version>

    <!--
     Note: this library depends on Guava 11 to match Hive. But we need Guava 14 on the classpath
     during tests, since Spark needs that version. So the version is configurable.
    -->
    <guava.version>11.0.2</guava.version>

    <test.redirectToFile>true</test.redirectToFile>
  </properties>

  <dependencies>
    <dependency>
      <groupId>${akka.group}</groupId>
      <artifactId>akka-actor_${scala.binary.version}</artifactId>
      <version>${akka.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>${guava.version}</version>
    </dependency>
    <dependency>
      <groupId>com.twitter</groupId>
      <artifactId>chill-akka_${scala.binary.version}</artifactId>
      <version>0.3.6</version>
      <exclusions>
        <exclusion>
          <groupId>com.typesafe.akka</groupId>
          <artifactId>akka-actor_${scala.binary.version}</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.apache.spark</groupId>
      <artifactId>spark-core_${scala.binary.version}</artifactId>
      <version>${spark.version}</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.16</version>
        <configuration>
          <systemPropertyVariables>
            <java.awt.headless>true</java.awt.headless>
            <spark.home>${spark.home}</spark.home>
          </systemPropertyVariables>
          <redirectTestOutputToFile>${test.redirectToFile}</redirectTestOutputToFile>
          <useFile>${test.redirectToFile}</useFile>
          <argLine>-Xmx4096m -XX:MaxPermSize=512m</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <distributionManagement>
    <repository>
      <id>cdh.releases.repo</id>
      <url>http://maven.jenkins.cloudera.com:8081/artifactory/cdh-staging-local</url>
      <name>CDH Releases Repository</name>
    </repository>
    <snapshotRepository>
      <id>cdh.snapshots.repo</id>
      <url>http://maven.jenkins.cloudera.com:8081/artifactory/cdh-snapshot-local</url>
      <name>CDH Snapshots Repository</name>
    </snapshotRepository>
  </distributionManagement>

  <repositories>
    <repository>
      <id>spark-snapshot</id>
      <url>http://ec2-50-18-79-139.us-west-1.compute.amazonaws.com/data/spark_2.10-1.2-SNAPSHOT/</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

</project>
